Change absolute to relative path

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
         <meta charset="UTF-8">
         <title>Quiz et puzzle Génelard</title>
-        <link rel="stylesheet" href="/styles/styles.css">
-        <script src="/src/lib/jquery-3.7.1.min.js"></script>
-        <script src="/script/index.js" defer></script>
+        <link rel="stylesheet" href="styles/styles.css">
+        <script src="src/lib/jquery-3.7.1.min.js"></script>
+        <script src="script/index.js" defer></script>
 </head>
 <body id="home">
         <main>
                 <div class="home-section quiz-section motif-cabane-douanier">
-                        <img src="/src/img/quiz-side-home.png" alt="">
+                        <img src="src/img/quiz-side-home.png" alt="">
                         <div class="home-btn">Quiz</div>
                 </div>
                 <div class="home-section puzzle-section motif-cabane-douanier-court">
-                        <img src="/src/img/puzzle-side-home.png" alt="">
+                        <img src="src/img/puzzle-side-home.png" alt="">
                         <div class="home-btn">Puzzle</div>
                 </div>
-                <img src="/src/img/middle-line-home.svg" alt="" class="middle-line">
+                <img src="src/img/middle-line-home.svg" alt="" class="middle-line">
         </main>
         <div class="lignes-bg"></div>
         <div class="texture texture-fumé"></div>
