--- a/puzzle.html
+++ b/puzzle.html
@@ -3,10 +3,10 @@
 <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <script src="/src/lib/headbreaker.js"></script>
-        <script src="/src/lib/jquery-3.7.1.min.js"></script>
-        <script src="/script/puzzle.js" defer></script>
-        <link rel="stylesheet" href="/styles/styles.css">
+        <script src="src/lib/headbreaker.js"></script>
+        <script src="src/lib/jquery-3.7.1.min.js"></script>
+        <script src="script/puzzle.js" defer></script>
+        <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body id="puzzle" class="motif-cabane-douanier-court">
         <h1>Puzzle</h1>
@@ -16,22 +16,22 @@
                         <div class="title">Sélectionnez votre puzzle</div>
                         <div class="puzzles">
                                 <div class="puzzle-btn" data-puzzle-id="avion">
-                                        <img src="/src/img/puzzle/avion.jpg">
+                                        <img src="src/img/puzzle/avion.jpg">
                                 </div>
                                 <div class="puzzle-btn" data-puzzle-id="chaussures">
-                                        <img src="/src/img/puzzle/chaussures.jpg">
+                                        <img src="src/img/puzzle/chaussures.jpg">
                                 </div>
                                 <div class="puzzle-btn" data-puzzle-id="ferme">
-                                        <img src="/src/img/puzzle/ferme.jpg">
+                                        <img src="src/img/puzzle/ferme.jpg">
                                 </div>
                                 <div class="puzzle-btn" data-puzzle-id="liberation">
-                                        <img src="/src/img/puzzle/liberation.jpg">
+                                        <img src="src/img/puzzle/liberation.jpg">
                                 </div>
                                 <div class="puzzle-btn" data-puzzle-id="place_eglise">
-                                        <img src="/src/img/puzzle/place_eglise.jpg">
+                                        <img src="src/img/puzzle/place_eglise.jpg">
                                 </div>
                                 <div class="puzzle-btn" data-puzzle-id="soldat_allemand">
-                                        <img src="/src/img/puzzle/soldat_allemand.jpg">
+                                        <img src="src/img/puzzle/soldat_allemand.jpg">
                                 </div>
                         </div>
                 </div>
@@ -53,7 +53,7 @@
                 <div id="change-puzzle" class="btn hidden">Changer de puzzle</div>
 
                 <div id="go-to-quiz-btn">
-                        <img src="/src/img/design-btn-orange.png" alt="">
+                        <img src="src/img/design-btn-orange.png" alt="">
                         <div>Quiz</div>
                 </div>
         </main>
