--- a/quiz.html
+++ b/quiz.html
@@ -3,14 +3,14 @@
 <head>
         <meta charset="UTF-8">
         <title>Quiz</title>
-        <link rel="stylesheet" href="/styles/styles.css">
-        <script src="/src/lib/jquery-3.7.1.min.js"></script>
-        <script src="/script/data.js"></script>
-        <script src="/script/quiz.js" defer></script>
+        <link rel="stylesheet" href="styles/styles.css">
+        <script src="src/lib/jquery-3.7.1.min.js"></script>
+        <script src="script/data.js"></script>
+        <script src="script/quiz.js" defer></script>
 </head>
 <body id="quiz" class="motif-cabane-douanier">
         <div id="go-to-puzzle-btn">
-                <img src="/src/img/design-btn-green.png" alt="">
+                <img src="src/img/design-btn-green.png" alt="">
                 <div>Puzzle</div>
         </div>
 
@@ -43,7 +43,7 @@
                         </div>
                         <div class="result-text"></div>
                         <button class="btn">
-                                <a href="/index.html">Retourner au menu</a>
+                                <a href="index.html">Retourner au menu</a>
                         </button>
                 </div>
         </main>
