Ajout de transitions et de delay entre les questions + effets sur les boutons

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
         <script src="script/index.js" defer></script>
 </head>
 <body id="home">
-        <main>
-                <div class="home-section quiz-section motif-cabane-douanier">
-                        <img src="src/img/quiz-side-home.png" alt="">
-                        <div class="home-btn">Quiz</div>
-                </div>
-                <div class="home-section puzzle-section motif-cabane-douanier-court">
-                        <img src="src/img/puzzle-side-home.png" alt="">
-                        <div class="home-btn">Puzzle</div>
-                </div>
-                <img src="src/img/middle-line-home.svg" alt="" class="middle-line">
-        </main>
-        <div class="lignes-bg"></div>
-        <div class="texture texture-fumé"></div>
-        <div class="texture texture-papier"></div>
-<!--        <div class="shadow"></div>-->
+        <div id="app">
+                <main>
+                        <div class="home-section quiz-section motif-cabane-douanier">
+                                <img src="src/img/quiz-side-home.png" alt="">
+                                <div class="home-btn">Quiz</div>
+                        </div>
+                        <div class="home-section puzzle-section motif-cabane-douanier-court">
+                                <img src="src/img/puzzle-side-home.png" alt="">
+                                <div class="home-btn">Puzzle</div>
+                        </div>
+                        <img src="src/img/middle-line-home.svg" alt="" class="middle-line">
+                </main>
+                <div class="lignes-bg"></div>
+                <div class="texture texture-fumé"></div>
+                <div class="texture texture-papier"></div>
+        <!--        <div class="shadow"></div>-->
 
-        <div id="dark-overlay"></div>
+                <div id="dark-overlay"></div>
+        </div>
 </body>
 </html>
